--- a/Views/Carrello/Index.cshtml
+++ b/Views/Carrello/Index.cshtml
@@ -18,7 +18,7 @@
                     <img src="@orologio.UrlImmagine" alt="Immagine Prodotto" class="img-fluid rounded" />
                 </div>
                 <div class="col-12 col-sm-7 cart-item-details">
-                    <h6 class="mb-1">@orologio.Nome</h6>
+                    <h6 class="mb-1">@orologio.Modello</h6>
                     <small class="text-muted">@orologio.Descrizione</small>
                     <div class="d-flex align-items-center mt-2 cart-item-actions">
                         <!-- Pulsanti per modificare la quantità -->
@@ -35,7 +35,7 @@
     }
     else
     {
-        <p>Carrello is null.</p>
+        <p>Carrello vuoto.</p>
     }
 </div>
 
