--- a/Views/Ordini/Index.cshtml
+++ b/Views/Ordini/Index.cshtml
@@ -54,7 +54,7 @@
         <button class="btn btn-dark">Ordina per data</button>
     </div>
 
-    @foreach (var ordine in Model.Ordini)
+    @* @foreach (var ordine in Model.Ordini)
     {
         <h5 class="order-date">Ordine effettuato il @ordine.DataAcquisto.ToString("dd/MM/yyyy")</h5>
         <div class="card order-card">
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-    }
+    } *@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
