--- a/Views/Carrello/Index.cshtml
+++ b/Views/Carrello/Index.cshtml
@@ -19,7 +19,7 @@
                 </div>
                 <div class="col-12 col-sm-7 cart-item-details">
                     <h6 class="mb-1">@orologio.Modello</h6>
-                    <small class="text-muted">@orologio.Descrizione</small>
+                    @* <small class="text-muted">@orologio.Descrizione</small> *@
                     <div class="d-flex align-items-center mt-2 cart-item-actions">
                         <!-- Pulsanti per modificare la quantità -->
                         <button class="btn btn-sm btn-outline-secondary me-2">-</button>
