--- a/Views/Prodotti/Index.cshtml
+++ b/Views/Prodotti/Index.cshtml
@@ -212,9 +212,9 @@
                                         <a asp-controller="Prodotti" asp-action="DettaglioProdotto" asp-route-id="@orologio.Id" class="btn btn-outline-secondary btn-sm flex-grow-1">Dettagli</a>
 
                                         <!-- Bottone icona carrello -->
-                                        <button type="button" class="btn btn-dark btn-sm ms-2" style="width: 36px; height: 36px; display: flex; justify-content: center; align-items: center;">
+                                        <a asp-controller="Carrello" asp-action="AggiungiACarrello" asp-route-id="@orologio.Id" class="btn btn-dark btn-sm ms-2" style="width: 36px; height: 36px; display: flex; justify-content: center; align-items: center;">
                                             <i class="bi-cart text-white"></i>
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
 
