--- a/Views/Prodotti/Index.cshtml
+++ b/Views/Prodotti/Index.cshtml
@@ -213,7 +213,7 @@
 
                                         <!-- Bottone icona carrello -->
                                         <button type="button" class="btn btn-dark btn-sm ms-2" style="width: 36px; height: 36px; display: flex; justify-content: center; align-items: center;">
-                                            <i class="bi-cart text-white"></i>
+                                            <a class="bi-cart text-white" asp-controller="Carrello" asp-action="AggiungiACarrello" asp-route="@orologio" class="btn btn-outline-secondary btn-sm flex-grow-1"></a>
                                         </button>
                                     </div>
                                 </div>
