ordini dettaglioOrdine aggiornato

--- a/Views/Carrello/Index.cshtml
+++ b/Views/Carrello/Index.cshtml
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col-12 col-sm-2 text-end">
                     <span class="fw-bold">€@orologio.Orologio.Prezzo</span>
-                    <!-- Remove Button (Wrapped in Form) -->
+                    <!--  Button rimuovi -->
                     <form method="post" action="@Url.Action("RimuoviDalCarrello", "Carrello")" style="display:inline;">
                         <input type="hidden" name="id" value="@orologio.OrologioId" />
                         <button type="submit" class="btn btn-sm btn-outline-danger">Rimuovi</button>
