ordini listaordini con nome nuovo

--- a/Views/Ordini/Index.cshtml
+++ b/Views/Ordini/Index.cshtml
@@ -51,7 +51,7 @@
 
 <div class="container mt-4">
     <div class="d-flex justify-content-start mb-3">
-        <button class="btn btn-dark">Ordina per data</button>
+         <a asp-action="OrdinaPerData" class="btn btn-dark">Ordina per data</a>
     </div>
 
      @foreach (var ordine in Model)
