--- a/Views/Ordini/Carousel.html
+++ b/Views/Ordini/Carousel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Replica Cartier con Scorrimento</title>
+  <title>Carousel cards con Scorrimento</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- SwiperJS CSS -->
