--- a/Views/Ordini/Index.cshtml
+++ b/Views/Ordini/Index.cshtml
@@ -50,9 +50,9 @@
    
 
 <div class="container mt-4">
-    <div class="d-flex justify-content-start mb-3">
+@*    <div class="d-flex justify-content-start mb-3">
          <a asp-action="OrdinaPerData" class="btn btn-dark">Ordina per data</a>
-    </div>
+    </div> *@
 
      @foreach (var ordine in Model)
     {
