ordini fix view elenco media query

--- a/Views/Ordini/Index.cshtml
+++ b/Views/Ordini/Index.cshtml
@@ -32,7 +32,7 @@
     .order-date {
       font-weight: bold;
     }
-@*    @media screen and (max-width: 576px) {
+    @@media screen and (max-width: 576px) {
       .order-card {
         text-align: center;
       }
@@ -45,7 +45,7 @@
         margin: 5px 10px;
       }
     }
-  integrare in site.css media query *@  
+ 
   </style>
    
 
